style.css
* {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  outline: none;
  text-decoration: none;
}

body {
  font-family: "Poppins", sans-serif;
}

html {
  scroll-behavior: smooth;
  cursor: url;
}

.navbar {
  padding: 1rem 7%;
  display: flex;
  position: fixed;
  align-items: center;
  top: 0;
  right: 0;
  left: 0;
  justify-content: space-between;
  background-color: rgba(255, 255, 255, 0.7);
  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
  z-index: 9999;
}

.navbar .navbar-logo h2 {
  font-size: 1.5rem;
  font-weight: 700;
  color: #1450a3;
}

.navbar .navbar-nav a {
  margin-right: 1rem;
  color: black;
}

.navbar .navbar-nav a:hover {
  color: #1450a3;
}

#menu {
  display: none;
}

.home {
  margin-top: 5rem;
  padding: 12rem 7%;
  margin: auto;
  height: 100vh;
}

.home .row {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.home .row .content {
  max-width: 40%;
}

.home .content h2 {
  font-size: 1.5rem;
  line-height: 3.4rem;
  font-weight: 500;
  color: #1450a3;
}
.home .content span {
  font-size: 3rem;
  font-weight: 700;
  line-height: 3rem;
  color: black;
}

.home .content span {
  display: block;
}

.home .content h3 {
  font-size: 1.5rem;
  font-weight: 400;
  margin-bottom: 1rem;
}

.home .photo .foto {
  border-radius: 50%;
}

.home .content p {
  font-size: 1rem;
}

.home .btn {
  display: inline-block;
  padding: 1rem 2rem;
  margin-top: 1rem;
  background-color: #1450a3;
  color: white;
  border-radius: 0.5rem;
  font-weight: bold;
  transition: 1s;
}

.home a:hover {
  background-color: rgb(12, 12, 41);
}

.container-about {
  padding: 3rem 7%;
  width: 100%;
  background-color: #1450a3;
  color: white;
}

.container-about > h1 {
  font-size: 2rem;
}

.container-about > .bottom-line {
  width: 5rem;
  height: 0.3rem;
  background-color: rgb(68, 158, 243);
}

.container-about > .row {
  display: flex;
}

.row .about-content1,
.about-content2 {
  flex-basis: 50rem;
  padding: 1rem 1rem;
}

.about-content1 h2,
.about-content2 h2 {
  padding-bottom: 1rem;
}

.about-content1 > p {
  border-left: 3px solid white;
  padding-left: 1rem;
  position: relative;
}

.about-content1 .pendidikan span {
  font-size: 1.2rem;
}

.about-content1 .pendidikan .sejak,
.jurusan,
.fakultas {
  display: block;
  font-size: 1.2rem;
}

.about-content1 > p::before {
  content: "";
  width: 20px;
  height: 20px;
  background-color: white;
  position: absolute;
  left: -12px;
  top: -3px;
  border-radius: 50%;
  border: 2px solid #1450a3;
  box-sizing: border-box;
}

.container-footer {
  background-color: rgb(12, 12, 41);
  padding: 3rem 0;
}

.container-footer .copy {
  color: white;
  font-size: 0.8rem;
  font-weight: normal;
  text-align: center;
  padding: 1rem 0;
}

.container-footer .icon {
  text-align: center;
}

.container-footer .icon > a {
  padding: 0 0.3rem;
}

.container-footer .icon > a:hover svg {
  fill: #1450a3;
}

/* responsive */
/* For laptop: */
@media (max-width: 1336px) {
  html {
    font-size: 75%;
  }

  .navbar {
    padding: 1.4rem 7%;
  }
}
/* For tablet: */
@media (max-width: 768px) {
  html {
    font-size: 62.5%;
  }

  #menu {
    display: inline-block;
  }
  .navbar .navbar-nav {
    position: absolute;
    top: 100%;
    right: -100%;
    background-color: white;
    width: 30rem;
    height: 100vh;
    transition: 1s;
  }

  .navbar .navbar-nav.active {
    right: 0;
  }

  .navbar #menu:active {
    color: #1450a3;
  }

  .navbar .navbar-logo h2 {
    font-size: 2rem;
    font-weight: 700;
  }

  .home {
    margin-top: 5rem;
    padding: 10rem 7%;
    margin: auto;
    height: 100vh;
  }

  .home .row {
    flex-wrap: wrap-reverse;
    justify-content: center;
    padding-top: 5rem;
  }

  .home .row .content {
    max-width: 100%;
  }

  .home .photo {
    padding-bottom: 1.7rem;
  }

  .navbar {
    padding: 2rem 7%;
  }

  .navbar .navbar-nav a {
    display: block;
    font-size: 2rem;
    padding: 1.2rem 3rem;
  }

  .container-about .row {
    color: whitesmoke;
    flex-wrap: wrap;
  }

  .container-footer .icon > a svg {
    width: 25px;
  }

  .about-content1 > p::before {
    content: "";
    width: 16px;
    height: 16px;
    background-color: white;
    position: absolute;
    left: -10px;
    top: -3px;
    border-radius: 50%;
    border: 2px solid #1450a3;
    box-sizing: border-box;
  }
}
/* For phone: */
@media (max-width: 450px) {
  html {
    font-size: 55%;
  }
}

